5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1715_3066.log
== TEST (2019-05-02 16:25:37) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print("0 pontos de vida")
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0 pontos de vida
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:56) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print("0 pontos de vida")
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0 pontos de vida
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:17) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print("0 pontos de vida")
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0 pontos de vida
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:04) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:27:19) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.206756
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
-130
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210
VIVO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:53) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:23) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:47) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:43) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	print(pvr)
	if(pvr > 0):
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
-130
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:22) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
		if(pvr > 0):
		print(pvr)
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 9
    if(pvr > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:30) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	if(pvr > 0):
		print(pvr)
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:43) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	if(pvr > 0):
		print(pvr)
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:04) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	if(pvr > 0):
		print(pvr)
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- OUTPUT:
0
MORTO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:31:15) 
-- CODE:
#Leitura dos dados: pontos de vida e valores dos dados sorteados
v = int(input("Digite a quantidade inicial de pontos de vida: "))
p1 = int(input("Digite o valor do primeiro sorteio: "))
p2 = int(input("Digite o valor do segundo sorteio: "))
p3 = int(input("Digite o valor do terceiro sorteio: "))

if(1 <= p1 <= 12) and (1 <= p2 <= 12) and (1 <= p3 <= 12) and (v >= 0):
	pvr = v - (10*(p1+p2+p3))
	if(pvr > 0):
		print(pvr)
		print("VIVO")
	else:
		print(0)
		print("MORTO")
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.162459
-- TEST CASE 1:
---- input:
120
6
9
10
---- correct output:
0
MORTO
---- user output:
0
MORTO
-- TEST CASE 2:
---- input:
200
15
20
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
260
2
1
2
---- correct output:
210
VIVO
---- user output:
210
VIVO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
